// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for size: "inherit", weight: bold, align: center, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: center;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 700;
  color: #000;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: inherit;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  line-height: inherit;
  font-size: inherit;
}"
`;

exports[`getComponentCss() should return correct css for size: "large", weight: semibold, align: left, color: notification-error, ellipsis: true and theme: light 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: left;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 600;
  color: #e00000;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: nowrap;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.3333333333;
  font-size: 2.25rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "medium", weight: bold, align: right, color: neutral-contrast-high, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: right;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 700;
  color: #e3e4e5;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: nowrap;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.5;
  font-size: 1.5rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "small", weight: regular, align: left, color: default, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: left;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  color: #000;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: inherit;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  line-height: 1.5;
  font-size: 1rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-large", weight: regular, align: center, color: brand, ellipsis: false and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: center;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 400;
  color: #d5001c;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: inherit;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  line-height: 1.2307692308;
  font-size: 3.25rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-large", weight: thin, align: right, color: brand, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: right;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 100;
  color: #d5001c;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: nowrap;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.2307692308;
  font-size: 3.25rem;
}"
`;

exports[`getComponentCss() should return correct css for size: "x-small", weight: semibold, align: left, color: inherit, ellipsis: false and theme: light 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: left;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 600;
  color: currentColor;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: inherit;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  line-height: 1.6666666667;
  font-size: 0.75rem;
}"
`;

exports[`getComponentCss() should return correct css for size: {"base":"small","xs":"large","s":"medium","m":"inherit","l":"x-small","xl":"x-large"}, weight: bold, align: center, color: notification-error, ellipsis: true and theme: dark 1`] = `
":host {
  display: block;
}
::slotted(p), ::slotted(address), ::slotted(blockquote), ::slotted(figcaption), ::slotted(cite), ::slotted(time), ::slotted(legend) {
  margin: inherit !important;
  padding: inherit !important;
  font-family: inherit !important;
  font-weight: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-style: normal !important;
  color: inherit !important;
  text-align: inherit !important;
  overflow-wrap: inherit !important;
  word-wrap: inherit !important;
  hyphens: inherit !important;
  white-space: inherit !important;
}
.root {
  display: inherit;
  padding: 0;
  margin: 0;
  text-align: center;
  font-family: 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  font-weight: 700;
  color: #fc1717;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  list-style-type: none;
  white-space: nowrap;
  transition: font-size 1ms linear;
  -webkit-text-size-adjust: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: 1.5;
  font-size: 1rem;
}
@media (min-width: 480px) {
  .root {
    line-height: 1.3333333333;
    font-size: 2.25rem;
  }
}

@media (min-width: 760px) {
  .root {
    line-height: 1.5;
    font-size: 1.5rem;
  }
}

@media (min-width: 1000px) {
  .root {
    line-height: inherit;
    font-size: inherit;
  }
}

@media (min-width: 1300px) {
  .root {
    line-height: 1.6666666667;
    font-size: 0.75rem;
  }
}

@media (min-width: 1760px) {
  .root {
    line-height: 1.2307692308;
    font-size: 3.25rem;
  }
}
"
`;

exports[`getSlottedCss() should return correct css 1`] = `
"p-text a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
p-text[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
p-text b, p-text strong {
  font-weight: 700 !important;
}
p-text em, p-text i {
  font-style: normal !important;
}
p-text a:hover {
  color: #d5001c !important;
}
p-text a::-moz-focus-inner {
  border: 0 !important;
}
p-text a:focus {
  outline-color: currentColor !important;
}
p-text a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;

exports[`getSlottedCss() should return correct css with prefix 1`] = `
"prefixed-p-text a {
  color: inherit !important;
  text-decoration: underline !important;
  transition: color var(--p-transition-duration, .24s) ease !important;
  outline: 1px solid transparent !important;
  outline-offset: 1px !important;
}
prefixed-p-text[theme=\\"dark\\"] a:hover {
  color: #ff0223 !important;
}
prefixed-p-text b, prefixed-p-text strong {
  font-weight: 700 !important;
}
prefixed-p-text em, prefixed-p-text i {
  font-style: normal !important;
}
prefixed-p-text a:hover {
  color: #d5001c !important;
}
prefixed-p-text a::-moz-focus-inner {
  border: 0 !important;
}
prefixed-p-text a:focus {
  outline-color: currentColor !important;
}
prefixed-p-text a:focus:not(:focus-visible) {
  outline-color: transparent !important;
}"
`;
